# my-router-info-protocol

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  first.c  first.h  peer-listen.c  peer-listen.out  router_2.riptbl
broadcast-all/: abc.c
src/: Makefile  first.c  first.h  host.c  host.h  host_1.hosttbl  peer-listen.c  peer-listen.out  router_1.riptbl
src/broadcast-all/: abc.out
src/broadcast-test/: broadcast-test.c  broadcast.out
src/first/: first.c  first.h
src/getchar-test/: Makefile  a.out  getchar.c
src/host/: host.c  host.h
src/hosttbls/: host_103.hosttbl  host_2.hosttbl
src/peer-listen/: peer-listen.c
src/riptbls/: router_1.riptbl  router_2.riptbl
src/stashed-riptbls/: copy_2.riptbl
src/thread-test/: a.out  thread_test.c
src/topology-grapher/: topology-grapher.c  topology-grapher.h
